[package]
name = "purge"
version = "1.0.10"
authors = ["David Wildasin <dragonmaus@posteo.net>"]
edition = "2018"
description = "Recursively shred files and directories"
repository = "https://git.dragonma.us/dragonmaus/purge.rs"
license = "BSD-3-Clause-Clear"
categories = ["command-line-utilities"]
publish = false

[dependencies]
cfg-if = "1"
getopt = "1"
program = { git = "https://git.dragonma.us/dragonmaus/program.rs", version = "2" }
rand = "0.8"

[features]
windows_by_handle = []
