[package]
name = "purge"
version = "1.0.1"
authors = ["David Wildasin <dragonmaus@posteo.net>"]
edition = "2018"
description = "Recursively shred files and directories"
repository = "https://git.dragonma.us/rust/purge"
license = "BSD-3-Clause-Clear"
categories = ["command-line-utilities"]
publish = false

[build-dependencies]
regex = "1"

[dependencies]
cfg-if = "1"
getopt = "1"
rand = "0.8"

[dependencies.program]
git = "git://git.dragonma.us/rust/program"

[features]
windows_by_handle = []
